--- a/app/static/mystyle.css
+++ b/app/static/mystyle.css
@@ -1,9 +1,38 @@
+body{
+background-color: #1fc8db;   
+background-image: linear-gradient(141deg,#9fb8ad 0%, #1fc8db 51%,#2cb5e8 75%);
+color: white;
+Opacity: 95;
+
+}
+
 .navbar-brand {
     color: white;
     font-size: 20px;
     font-family: "Times New Roman", Times, serif;
     font-weight: bold;
     text-transform: uppercase;
-    text-shadow: 2px 2px #FF0000;
 
+}
+
+.table:hover{
+    background-color: whitesmoke;
+    color: black;
+}
+
+a{
+    color: rgb(7, 7, 160);
+}
+
+p.bottom {
+    margin-bottom:140% 
+}
+
+img{
+    float: left;
+    margin: 10px;
+}
+
+h1{
+    text-transform: capitalize;
 }
