--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,5 +1,5 @@
 
-    <table class="table table-hover">
+    <table class="table">
         <tr>
             <td width="70px">
                 <a href="{{ url_for('user', username=post.author.username) }}">
