--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <table class="table table-hover">
+    <table class="table">
         <tr>
-            <td width="256px"><img src="{{ user.avatar(256) }}"></td>
             <td>
-                <h1>User: {{ user.username }}</h1>
+                <img src="{{ user.avatar(236) }}">
+                <h1>{{ user.username }}</h1>
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 {% if user.last_seen %}<p>Last seen: {{moment(user.last_seen).fromNow()}}</p>{% endif %}
                 <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
