--- a/app/static/mystyle.css
+++ b/app/static/mystyle.css
@@ -1,8 +1,9 @@
-body{
-background-color: #1fc8db;   
-background-image: linear-gradient(141deg,#9fb8ad 0%, #1fc8db 51%,#2cb5e8 75%);
+html body {
+background-color: #2cb5e8;   
+background-image: radial-gradient(#d0d6d5 0%, #1fc8db 40%,#2cb5e8 80%);
+background-repeat: no-repeat;
 color: white;
-Opacity: 95;
+Opacity: 100;
 
 }
 
@@ -22,10 +23,6 @@ Opacity: 95;
 
 a{
     color: rgb(7, 7, 160);
-}
-
-p.bottom {
-    margin-bottom:140% 
 }
 
 img{
