--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,5 +9,5 @@
         </div>
     </div>
     <br>
-    <p class="bottom">New User? <a href="{{ url_for('register') }}">Register</a></p>
+    <p class="bottom">New User? <a href="{{ url_for('register') }}">Register</a> or <a href="{{ url_for('user', username='Demo') }}">Demo</a></p>
 {% endblock %}
