--- a/app/static/mystyle.css
+++ b/app/static/mystyle.css
@@ -37,7 +37,7 @@ table tr:last-child td:last-child {
     padding: 20px;
 }
 
-td:hover {
+.data:hover {
     background-color: rgb(255, 255, 255);
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
@@ -72,4 +72,10 @@ img{
 
 h1{
     text-transform: capitalize;
+}
+
+.btn-sm {
+    margin-bottom: 10px;
+    margin-right: 10px;
+    border-radius: 10;
 }
