--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,17 +1,21 @@
-<a href="{{ url_for('user', username=post.author.username) }}">
     <table class="table">
         <tr>
-            <td width="70px">
+            <td width="70px" class="data">
+                <a href="{{ url_for('user', username=post.author.username) }}">
                     <img src="{{ post.author.avatar(70) }}" />
+                </a>
             </td>
             <td>
-                <a href="{{ url_for('user', username=post.author.username) }}">
+                <span class="user_popup">
+                <a class="btn btn-primary btn-sm" href="{{ url_for('user', username=post.author.username) }}">
                     {{ post.author.username }}
                 </a>
-                said {{ moment(post.timestamp).fromNow() }}:
+                </span>
                 <br>
                 {{ post.body }}
             </td>
         </tr>
     </table>
-</a>
+    <p style="text-align:right">posted {{ moment(post.timestamp).fromNow() }}:</p>
+    </br>
+    </br>
